--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,19 +7,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root {
-      --primary-color: #4fc3f7; /* Light blue */
-      --primary-dark: #29b6f6;
-      --secondary-color: #81c784; /* Light green */
+      --primary-color: #3fb0e6;
+      --primary-dark: #2799d6;
+      --secondary-color: #70b977;
       --error-color: #ef5350;
-      --success-color: #66bb6a;
-      --warning-color: #ffb74d;
+      --success-color: #56a962;
+      --warning-color: #e39a3c;
       --text-primary: #2c3e50;
       --text-secondary: #5d6d7e;
-      --background: #f8fffe;
+      --background: #eaf8ff;
       --surface: #ffffff;
-      --border-color: #e8f4f8;
-      --shadow: 0 2px 12px rgba(79, 195, 247, 0.1);
-      --shadow-hover: 0 4px 24px rgba(79, 195, 247, 0.15);
+      --border-color: #d1e6f0;
+      --shadow: 0 2px 12px rgba(63, 176, 230, 0.14);
+      --shadow-hover: 0 4px 24px rgba(39, 153, 214, 0.2);
     }
 
     * {
@@ -29,7 +29,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f0f8ff 0%, #f0fff4 100%);
+      background: linear-gradient(135deg, #e0f2ff 0%, #e0fff0 100%);
       min-height: 100vh;
       display: flex;
       justify-content: center;
