--- a/frontend/hospitals.html
+++ b/frontend/hospitals.html
@@ -14,16 +14,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root {
-      --primary-color: #2ec4b6; /* mint */
-      --primary-dark: #1aa89b;
-      --secondary-color: #4dabf7; /* sky */
-      --accent-color: #ff6b6b; /* coral */
+      --primary-color: #25b2a5;
+      --primary-dark: #188f84;
+      --secondary-color: #3f98e6;
+      --accent-color: #f76a6a;
       --danger-color: #f44336;
       --text-primary: #212121;
       --text-secondary: #757575;
-      --background: #fafafa;
+      --background: #f2f5f5;
       --surface: #ffffff;
-      --border-color: #e0e0e0;
+      --border-color: #d6dede;
       --shadow: 0 2px 10px rgba(0,0,0,0.1);
       --shadow-hover: 0 4px 20px rgba(0,0,0,0.15);
       --gradient-primary: linear-gradient(135deg, var(--primary-color), var(--primary-dark));
@@ -1045,7 +1045,7 @@
           </div>
           <h3>Google Maps API Key Required</h3>
           <p>Please add your Google Maps API key to use this feature.</p>
-          <button onclick="window.location.href='emergency.html'" style="background: var(--primary-color); color: white; border: none; padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; margin-top: 1rem;">
+          <button onclick="window.location.href='emergency_enhanced.html'" style="background: var(--primary-color); color: white; border: none; padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; margin-top: 1rem;">
             Go to Emergency Page
           </button>
         </div>
