--- a/frontend/index.html
+++ b/frontend/index.html
@@ -601,6 +601,18 @@
     </div>
   </div>
 
+  <div id="policyModal" style="position:fixed;inset:0;background:rgba(0,0,0,0.5);display:none;align-items:center;justify-content:center;z-index:1000;">
+    <div style="background:#fff;max-width:720px;width:90%;border-radius:16px;box-shadow:0 20px 40px rgba(0,0,0,0.2);overflow:hidden;">
+      <div style="padding:1.25rem 1.5rem;border-bottom:1px solid #eee;font-weight:600;" id="policyTitle"></div>
+      <div style="padding:1rem 1.5rem;max-height:55vh;overflow:auto;line-height:1.6;color:#333;" id="policyContent"></div>
+      <div style="display:flex;gap:.75rem;justify-content:flex-end;padding:1rem 1.5rem;border-top:1px solid #eee;">
+        <button style="background:#fff;border:2px solid #d6dede;color:#333;padding:.6rem 1rem;border-radius:10px;cursor:pointer;" onclick="closePolicyModal()">Close</button>
+        <button style="background:linear-gradient(135deg, var(--primary-color), var(--primary-dark));color:#fff;border:none;padding:.6rem 1rem;border-radius:10px;cursor:pointer;" onclick="acceptPolicy()">I Agree</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="api-config.js"></script>
   <script>
     // Password strength checker
     function checkPasswordStrength(password) {
@@ -705,20 +717,153 @@
 
     // Social login handler
     function socialLogin(provider) {
-      showMessage(`Redirecting to ${provider} login...`, 'success');
-      // In a real app, this would integrate with OAuth providers
-      setTimeout(() => {
-        showMessage(`${provider} login not implemented in demo`, 'error');
-      }, 1000);
+      const t = document.getElementById('termsCheck');
+      if (t && !t.checked) {
+        openPolicyModal('terms');
+        return;
+      }
+      if (provider === 'google') {
+        googleLogin();
+      } else if (provider === 'facebook') {
+        facebookLogin();
+      }
     }
 
     // Show terms and privacy
     function showTerms() {
-      showMessage('Terms of Service would open in a modal or new page', 'success');
+      openPolicyModal('terms');
     }
 
     function showPrivacy() {
-      showMessage('Privacy Policy would open in a modal or new page', 'success');
+      openPolicyModal('privacy');
+    }
+
+    function openPolicyModal(type) {
+      const modal = document.getElementById('policyModal');
+      const title = document.getElementById('policyTitle');
+      const content = document.getElementById('policyContent');
+      if (type === 'terms') {
+        title.textContent = 'Terms of Service';
+        content.innerHTML = `
+          <p>This application provides general wellness information, basic first aid guidance, and common home remedies. It does not replace professional medical advice, diagnosis, or treatment.</p>
+          <p>In emergencies or severe symptoms, contact local emergency services or a licensed healthcare professional immediately.</p>
+          <p>Use remedies responsibly. If you have allergies, chronic conditions, are pregnant, nursing, or taking medicines, consult a healthcare professional before using any remedy.</p>
+          <p>Information is educational and may reference reputable public sources. Individual responses vary; discontinue any remedy that causes discomfort or adverse reactions.</p>
+          <p>By using the app, you accept that content may not be exhaustive and agree not to rely on it as a substitute for medical care.</p>
+          <p>Accounts created via email or social providers may store basic profile data locally to personalize your experience.</p>
+        `;
+      } else {
+        title.textContent = 'Privacy Policy';
+        content.innerHTML = `
+          <p>The app stores minimal data locally on your device, such as profile name, email, preferences, and basic usage history, to improve your experience.</p>
+          <p>If you sign in with Google or Facebook, basic profile information (name, email, profile image) may be used to personalize your account. No sensitive medical data is sent to third parties.</p>
+          <p>Data may be cleared anytime by removing app storage from your browser settings.</p>
+          <p>Do not share secrets or sensitive information in chat inputs.</p>
+        `;
+      }
+      modal.style.display = 'flex';
+    }
+
+    function closePolicyModal() {
+      const modal = document.getElementById('policyModal');
+      modal.style.display = 'none';
+    }
+
+    function acceptPolicy() {
+      const t = document.getElementById('termsCheck');
+      if (t) t.checked = true;
+      closePolicyModal();
+    }
+
+    function ensureScript(src, id) {
+      return new Promise((resolve, reject) => {
+        if (id && document.getElementById(id)) { resolve(); return; }
+        const s = document.createElement('script');
+        if (id) s.id = id;
+        s.src = src;
+        s.onload = () => resolve();
+        s.onerror = () => reject(new Error('Script load failed'));
+        document.body.appendChild(s);
+      });
+    }
+
+    function parseJwt(token) {
+      try {
+        const base64Url = token.split('.')[1];
+        const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+        const jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+          return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+        }).join(''));
+        return JSON.parse(jsonPayload);
+      } catch(e) { return null; }
+    }
+
+    function completeLogin(profile, provider) {
+      const users = JSON.parse(localStorage.getItem('users') || '{}');
+      let username = profile.name || (profile.email ? profile.email.split('@')[0] : provider + '_user');
+      if (!users[username]) {
+        users[username] = {
+          password: '',
+          email: profile.email || '',
+          newsletter: false,
+          createdAt: new Date().toISOString(),
+          favorites: [],
+          profile: { provider: provider, picture: profile.picture || '' }
+        };
+      } else {
+        const u = users[username];
+        u.email = u.email || profile.email || '';
+        u.profile = u.profile || {};
+        u.profile.provider = provider;
+        if (profile.picture) u.profile.picture = profile.picture;
+      }
+      localStorage.setItem('users', JSON.stringify(users));
+      localStorage.setItem('loggedInUser', username);
+      showMessage('Login successful! Redirecting to home page...', 'success');
+      setTimeout(() => { window.location.href = '3 home.html'; }, 1500);
+    }
+
+    function googleLogin() {
+      if (!window.API_CONFIG || !API_CONFIG.GOOGLE_CLIENT_ID) {
+        showMessage('Set Google client ID in api-config.js', 'error');
+        return;
+      }
+      ensureScript('https://accounts.google.com/gsi/client', 'gsi').then(() => {
+        window.google.accounts.id.initialize({
+          client_id: API_CONFIG.GOOGLE_CLIENT_ID,
+          callback: function(resp) {
+            const data = parseJwt(resp.credential) || {};
+            completeLogin({ name: data.name || 'Google User', email: data.email || '', picture: data.picture || '' }, 'google');
+          }
+        });
+        window.google.accounts.id.prompt();
+      }).catch(() => {
+        showMessage('Google login initialization failed', 'error');
+      });
+    }
+
+    function facebookLogin() {
+      if (!window.API_CONFIG || !API_CONFIG.FACEBOOK_APP_ID) {
+        showMessage('Set Facebook App ID in api-config.js', 'error');
+        return;
+      }
+      ensureScript('https://connect.facebook.net/en_US/sdk.js', 'fb-sdk').then(() => {
+        window.fbAsyncInit = function() {
+          FB.init({ appId: API_CONFIG.FACEBOOK_APP_ID, cookie: true, xfbml: false, version: 'v19.0' });
+          FB.login(function(response) {
+            if (response.authResponse) {
+              FB.api('/me', { fields: 'name,email,picture' }, function(user) {
+                const pic = user && user.picture && user.picture.data && user.picture.data.url ? user.picture.data.url : '';
+                completeLogin({ name: user.name || 'Facebook User', email: user.email || '', picture: pic }, 'facebook');
+              });
+            } else {
+              showMessage('Facebook login cancelled', 'error');
+            }
+          }, { scope: 'email,public_profile' });
+        };
+      }).catch(() => {
+        showMessage('Facebook SDK load failed', 'error');
+      });
     }
 
     // Enhanced message display
