--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -475,6 +475,10 @@
         <i class="fab fa-google"></i>
         Google
       </a>
+      <a href="#" class="social-btn" onclick="socialLogin('facebook')">
+        <i class="fab fa-facebook-f"></i>
+        Facebook
+      </a>
     </div>
 
     <div class="divider">
@@ -720,6 +724,8 @@
       }
       if (provider === 'google') {
         googleLogin();
+      } else if (provider === 'facebook') {
+        facebookLogin();
       }
     }
 
@@ -750,7 +756,7 @@
         title.textContent = 'Privacy Policy';
         content.innerHTML = `
           <p>The app stores minimal data locally on your device, such as profile name, email, preferences, and basic usage history, to improve your experience.</p>
-          <p>If you sign in with Google, basic profile information (name, email, profile image) may be used to personalize your account. No sensitive medical data is sent to third parties.</p>
+          <p>If you sign in with Google or Facebook, basic profile information (name, email, profile image) may be used to personalize your account. No sensitive medical data is sent to third parties.</p>
           <p>Data may be cleared anytime by removing app storage from your browser settings.</p>
           <p>Do not share secrets or sensitive information in chat inputs.</p>
         `;
@@ -836,7 +842,29 @@
       });
     }
 
-    
+    function facebookLogin() {
+      if (!window.API_CONFIG || !API_CONFIG.FACEBOOK_APP_ID) {
+        showMessage('Set Facebook App ID in api-config.js', 'error');
+        return;
+      }
+      ensureScript('https://connect.facebook.net/en_US/sdk.js', 'fb-sdk').then(() => {
+        window.fbAsyncInit = function() {
+          FB.init({ appId: API_CONFIG.FACEBOOK_APP_ID, cookie: true, xfbml: false, version: 'v19.0' });
+          FB.login(function(response) {
+            if (response.authResponse) {
+              FB.api('/me', { fields: 'name,email,picture' }, function(user) {
+                const pic = user && user.picture && user.picture.data && user.picture.data.url ? user.picture.data.url : '';
+                completeLogin({ name: user.name || 'Facebook User', email: user.email || '', picture: pic }, 'facebook');
+              });
+            } else {
+              showMessage('Facebook login cancelled', 'error');
+            }
+          }, { scope: 'email,public_profile' });
+        };
+      }).catch(() => {
+        showMessage('Facebook SDK load failed', 'error');
+      });
+    }
 
     // Enhanced message display
     function showMessage(text, type = 'error') {
